# mcp-or-agents

./: Makefile  README.md  main.py  pyproject.toml  setup.py
tests/: test_main.py
