[project]
authors = [
    { name="Xin Shi", email="shi321xin@gmail.com" },
    { name="Zheng Shi", email="shi.zheng.tfls@gmail.com" },
]
name = "mcp-or-agents"
version = "0.1.0"
description = "MCP OR Agents"
readme = "README.md"
requires-python = ">=3.12.9"

[tool.uv.dependencies]
python = "3.12.9"

[tool.uv.dev-dependencies]
# uv
uv = "^0.6.12"

# linters and formatters
ruff = "^0.11.4"
mypy = "^1.14.1"

# testing
pytest = "*"
pytest-mock = "*"
